# pi-forall

./: .gitignore  README.md  pi-forall.cabal  pi.html  stack.yaml
.nix/: flake.nix
benchmarks/: Main.hs  auto-n-ways.sh
doc/: pi.ott
pi/examples/: AVL.pi  Compiler.pi
pi/std/: Nat.pi
src/: Arbitrary.hs  ConcreteSyntax.hs  Context.hs  Environment.hs  Equal.hs  LayoutToken.hs  Log.hs  Modules.hs  Parser.hs  PrettyPrint.hs  ScopeCheck.hs  Syntax.hs  TypeCheck.hs
src/PiForall/: ConcreteSyntax.hs  Parser.hs  PrettyPrint.hs
src/PiForall/AutoEnv/: Environment.hs  Equal.hs  Modules.hs  ScopeCheck.hs  Syntax.hs  TypeCheck.hs
src/PiForall/Rebound/: Environment.hs  Equal.hs  ScopeCheck.hs  Syntax.hs  TypeCheck.hs
src/PiForall/Unbound/: Environment.hs  Equal.hs  Modules.hs  NameResolution.hs  Syntax.hs  TypeCheck.hs
test/: Main.hs  ParseScopeRT.hs
test/base/: Fail.pi
